--- a/index.html
+++ b/index.html
@@ -8,26 +8,22 @@
 </head>
 <body>
 
-    <header id="cabc">
-        <div id="cont">
-            <ul id="list">
-                <li>Product</li>
-                <li>Sobre</li>
-                <li>Contatos</li>
-            </ul>
-        </div>
+    <header>
+        <ul class="menu">
+            <li>Product</li>
+            <li>Sobre</li>
+            <li>Contatos</li>
+        </ul>
     </header>
 
     <div class="painel">
-        <h1 class="til">LOGIN</h1>
-        <br><br>
-        <div class="inf">
-            <input type="text" placeholder="User" class="text1">
-            <input type="password" placeholder="senha" class="text2">
-        </div>
+        <h1>LOGIN</h1>
 
-        <div id="enter">
-            <button class="but">Enter</button>
+        <div class="formulario">
+            <input type="text" placeholder="Usuário">
+            <input type="password" placeholder="senha">
+            
+            <button>Enter</button>
         </div>
 
     </div>
